# mgmt-assignment-huggingface-app

./: .dockerignore  .gitignore  .spaceignore  Dockerfile  Electronic-Commerce-Research_TopicModelling_Export.csv  README.md  agent.py  app.py  cleanup_scopus.py  dockerbuild.sh  dockerrun.sh  main.py  package_submission.py  pyproject.toml  requirements.txt  start.sh  test_pipeline.py  tools.py
.github/workflows/: deploy.yml
checkpoints/: chart_bar_abstract.html  chart_heat_abstract.html  chart_map_abstract.html  emb_abstract.npy
