[project]
name = "mgmt-assignment-huggingface-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "git-filter-repo>=2.47.0",
    "gradio==5.6.0",
    "groq>=0.9.0",
    "huggingface-hub==0.25.1",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "nltk>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "umap-learn>=0.5.6",
]
