[project]
name = "mgmt-assignment-huggingface-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "git-filter-repo",
    "gradio==5.15.0",             
    "groq",
    "huggingface-hub",   
    "langchain-core",
    "langchain-groq",
    "langgraph",
    "nltk",
    "numpy",
    "pandas",
    "pillow",            
    "plotly",
    "python-multipart",  
    "reportlab",
    "scikit-learn",
    "sentence-transformers",
    "starlette",          
    "torch",
    "transformers",      
    "umap-learn",
]
